--- a/src/app/backend/cuentas/cuentas.component.html
+++ b/src/app/backend/cuentas/cuentas.component.html
@@ -36,7 +36,7 @@
               <ion-select-option  value="Agua">Agua</ion-select-option>
               <ion-select-option  value="Luz">Luz</ion-select-option>
               <ion-select-option  value="Gas">Gas</ion-select-option>
-              <ion-select-option  value="Internet/Cable">Internet</ion-select-option>
+              <ion-select-option  value="Internet/Cable">Internet/cable</ion-select-option>
               <ion-select-option  value="Arriendo">Arriendo</ion-select-option>
             </ion-select>
          </ion-item><ion-item>  
@@ -44,8 +44,8 @@
           <ion-select [(ngModel)]="newCuentas.empresa" interface="popover">
             <ion-select-option  value="Lipigas">Lipigas</ion-select-option>
             <ion-select-option  value="Gasco">Gasco</ion-select-option>
-            <ion-select-option  value="Gas">Aguas Andinas</ion-select-option>
-            <ion-select-option  value="Internet/Cable">VTR</ion-select-option>
+            <ion-select-option  value="Aguas Andinas">Aguas Andinas</ion-select-option>
+            <ion-select-option  value="VTR">VTR</ion-select-option>
             <ion-select-option  value="Movistar">Movistar</ion-select-option>
             <ion-select-option  value="Enel">Enel</ion-select-option>
             <ion-select-option  value="Arriendo">Abastible</ion-select-option>
