--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -94,6 +94,7 @@
             <ion-accordion >
               <ion-item slot="header" >      
               <ion-grid [fixed]="true">
+
                 <ion-row>
                   <ion-col size="auto"><ion-label>{{P.id_propiedad}}</ion-label></ion-col>
                   <ion-col size="auto"><ion-icon name="home"></ion-icon></ion-col>
@@ -107,6 +108,8 @@
               <ion-item  slot="content">
                   <!--detalles de contacto -->
                 <ion-grid [fixed]="true">
+                  <div >
+                    <ion-label class="bold_lbl">Contactos</ion-label>
                   <ion-row  *ngFor="let c of filtroContacto(P.id)"  >     
                           <ion-col size="auto" ><ion-label>{{c.tipoContacto}}</ion-label></ion-col>
                           <ion-col size="auto"> <ion-label> <ion-icon name="person-circle"></ion-icon> {{c.nombre}} {{c.apellidop}} {{c.apellidom}}</ion-label></ion-col>
@@ -116,30 +119,45 @@
                             </ion-button> 
                       
           </ion-row>
-          <ion-row>
-            <ion-col size="auto"><ion-icon name="water"></ion-icon></ion-col>
-            <ion-col size="auto"><ion-label>cuentas agua</ion-label></ion-col>
-          </ion-row>
-          <ion-row>
-            <ion-col size="auto"><ion-icon name="flash"></ion-icon></ion-col>
-            <ion-col size="auto"><ion-label>cuentas electricidad</ion-label></ion-col>
-          </ion-row>
-          <ion-row>
-            <ion-col size="auto"><ion-icon name="flame"></ion-icon></ion-col>
-            <ion-col size="auto"><ion-label>cuentas gas</ion-label></ion-col>
-          </ion-row>
-          <ion-row>
-            <ion-col size="auto"><ion-icon name="globe"></ion-icon></ion-col>
-            <ion-col size="auto"><ion-label>cuentas internet</ion-label></ion-col>
-          </ion-row>
-          <ion-row>
-            <ion-col >
-            <ion-button [routerLink]="['/cuentas']" (click)="addContacto(P)" color="primary" size="small" style="margin: 5px;">
-            <ion-icon name="cash-outline" ></ion-icon><ion-label>Cuentas</ion-label>
-            </ion-button>
-            <ion-button [routerLink]="['/contacto']" (click)="addContacto(P)" color="secondary" size="small" style="margin: 5px;">
+          <ion-button [routerLink]="['/contacto']" (click)="addContacto(P)" color="secondary" size="small" style="margin: 5px;">
             <ion-icon name="person-add"></ion-icon><ion-label>contacto</ion-label>
             </ion-button>
+          </div>
+          <div >
+           <ion-label class="bold_lbl">Cuentas</ion-label>
+          <ion-row *ngFor="let c of filtroCuentaAgua(P.id)" > 
+            <ion-col size="auto"><ion-icon name="water"></ion-icon></ion-col>
+            <ion-col size="auto"><ion-label>{{c.tipoCuenta}},</ion-label></ion-col>
+            <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
+          </ion-row>
+          <ion-row *ngFor="let c of filtroCuentaLuz(P.id)" >
+            <ion-col size="auto"><ion-icon name="flash"></ion-icon></ion-col>
+            <ion-col size="auto"><ion-label>{{c.tipoCuenta}},</ion-label></ion-col>
+            <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
+          </ion-row>
+          <ion-row *ngFor="let c of filtroCuentaGas(P.id)" >
+            <ion-col size="auto"><ion-icon name="flame"></ion-icon></ion-col>
+            <ion-col size="auto"><ion-label>{{c.tipoCuenta}},</ion-label></ion-col>
+            <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
+          </ion-row>
+          <ion-row  *ngFor="let c of filtroCuentaInternet(P.id)">
+            <ion-col size="auto"><ion-icon name="globe"></ion-icon></ion-col>
+            <ion-col size="auto"><ion-label>{{c.tipoCuenta}},</ion-label></ion-col>
+            <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
+          </ion-row>
+          <ion-row  *ngFor="let c of filtroCuentaArriendo(P.id)">
+            <ion-col size="auto"><ion-icon name="globe"></ion-icon></ion-col>
+            <ion-col size="auto"><ion-label>{{c.tipoCuenta}},</ion-label></ion-col>
+            <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
+          </ion-row>
+          <ion-button [routerLink]="['/cuentas']" (click)="addContacto(P)" color="primary" size="small" style="margin: 5px;">
+            <ion-icon name="add-circle-outline"></ion-icon><ion-label>Cuentas</ion-label>
+            </ion-button>
+        </div>
+          <ion-row>
+            <ion-col >
+           
+          
             <ion-button (click)="newPropiedad = P; enableNewPropiedad = true; enablelista = false " color="warning" size="small" style="margin: 5px;">
             <ion-icon name="create-outline"></ion-icon>
             </ion-button>
@@ -157,4 +175,3 @@
       </ion-card>
   </div>
 </ion-content>
-<!-- -->
