--- a/src/app/backend/cuentas/cuentas.component.html
+++ b/src/app/backend/cuentas/cuentas.component.html
@@ -12,8 +12,8 @@
     <ion-card *ngIf="P" style="--background:  #808081; max-width: 800px; margin: auto;" > 
     <ion-card-content style="   max-width: 650px; margin: auto;" >
     
-        <ion-col size="auto"><ion-icon name="cash-outline" style="margin: 5px;"></ion-icon></ion-col>
-        <ion-col size="auto"><ion-label class="bold_lbl">Agregar nueva Cuentas</ion-label></ion-col>
+  
+      <ion-label class="bold_lbl">Agregar nueva Cuenta</ion-label>
      
       <ion-item >
         <ion-col size="auto"><ion-label>{{P.id_propiedad}}</ion-label></ion-col>
