--- a/src/app/backend/contacto/contacto.component.html
+++ b/src/app/backend/contacto/contacto.component.html
@@ -11,8 +11,7 @@
   <div class="main_content_div">
     <ion-card *ngIf="P" style="--background:  #808081; max-width: 800px; margin: auto;" > 
     <ion-card-content style="   max-width: 650px; margin: auto;" >
-      <ion-col size="auto"><ion-icon name="person-circle" ></ion-icon></ion-col>
-      <ion-col size="auto"><ion-label class="bold_lbl">Agregar nuevo Contacto</ion-label></ion-col>
+     <ion-label class="bold_lbl">Agregar nuevo Contacto</ion-label>
       <ion-item >
         <ion-col size="auto"><ion-label>{{P.id_propiedad}}</ion-label></ion-col>
          </ion-item>
