--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -149,6 +149,7 @@
             <ion-col size="auto"><ion-icon name="globe"></ion-icon></ion-col>
             <ion-col size="auto"><ion-label>{{c.tipoCuenta}},</ion-label></ion-col>
             <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
+            <ion-col  *ngFor="let gastos of gastos" size="auto"><ion-label>{{gastos.Total}}</ion-label></ion-col>
           </ion-row>
           <ion-button [routerLink]="['/cuentas']" (click)="addContacto(P)" color="primary" size="small" style="margin: 5px;">
             <ion-icon name="add-circle-outline"></ion-icon><ion-label>Cuentas</ion-label>
