--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,7 @@
           </ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle autoHide="false">
-          <ion-item button="true" detail="true" [routerLink]="['/set-propiedad']">
+          <ion-item button="true" detail="true" [routerLink]="['/soporte']">
             <ion-label>soporte</ion-label>
             <ion-icon slot="start" name="information-circle-outline"></ion-icon>
           </ion-item>
