--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -129,28 +129,38 @@
             <ion-col size="auto"><ion-icon name="water"></ion-icon></ion-col>
             <ion-col size="auto"><ion-label>{{c.tipoCuenta}},</ion-label></ion-col>
             <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
+            <ion-col size="auto"><ion-label>$14.000</ion-label></ion-col>
+            <ion-col size="auto"><ion-label>Pendientes</ion-label></ion-col>
           </ion-row>
           <ion-row *ngFor="let c of filtroCuentaLuz(P.id)" >
             <ion-col size="auto"><ion-icon name="flash"></ion-icon></ion-col>
             <ion-col size="auto"><ion-label>{{c.tipoCuenta}},</ion-label></ion-col>
             <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
+            <ion-col size="auto"><ion-label>$14.000</ion-label></ion-col>
+            <ion-col size="auto"><ion-label>Pendientes</ion-label></ion-col>
           </ion-row>
           <ion-row *ngFor="let c of filtroCuentaGas(P.id)" >
             <ion-col size="auto"><ion-icon name="flame"></ion-icon></ion-col>
             <ion-col size="auto"><ion-label>{{c.tipoCuenta}},</ion-label></ion-col>
             <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
+            <ion-col size="auto"><ion-label>$14.000</ion-label></ion-col>
+            <ion-col size="auto"><ion-label>Pendientes</ion-label></ion-col>
           </ion-row>
           <ion-row  *ngFor="let c of filtroCuentaInternet(P.id)">
             <ion-col size="auto"><ion-icon name="globe"></ion-icon></ion-col>
             <ion-col size="auto"><ion-label>{{c.tipoCuenta}},</ion-label></ion-col>
             <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
+            <ion-col size="auto"><ion-label>$14.000</ion-label></ion-col>
+            <ion-col size="auto"><ion-label>Pendientes</ion-label></ion-col>
           </ion-row>
           <ion-row  *ngFor="let c of filtroCuentaArriendo(P.id)">
             <ion-col size="auto"><ion-icon name="globe"></ion-icon></ion-col>
             <ion-col size="auto"><ion-label>{{c.tipoCuenta}},</ion-label></ion-col>
             <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
-            <ion-col  *ngFor="let gastos of gastos" size="auto"><ion-label>{{gastos.Total}}</ion-label></ion-col>
+            <ion-col size="auto"><ion-label>$14.000</ion-label></ion-col>
+            <ion-col size="auto"><ion-label>Pendientes</ion-label></ion-col>
           </ion-row>
+          <ion-col  *ngFor="let gastos of gastos" size="auto"><ion-label>{{gastos.Total}}</ion-label></ion-col>
           <ion-button [routerLink]="['/cuentas']" (click)="addContacto(P)" color="primary" size="small" style="margin: 5px;">
             <ion-icon name="add-circle-outline"></ion-icon><ion-label>Cuentas</ion-label>
             </ion-button>
