--- a/src/app/backend/soporte/soporte.component.html
+++ b/src/app/backend/soporte/soporte.component.html
@@ -1,9 +1,7 @@
 <ion-header>
   <ion-toolbar color="secondary">
     <ion-buttons slot="start">
-      <ion-button (click)="openMenu()">
-        <ion-icon slot="icon-only" name="menu-sharp"></ion-icon>
-      </ion-button>
+      <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>Soporte</ion-title>
   </ion-toolbar>
@@ -16,7 +14,7 @@
 
     <ion-card-header>
 
-      <ion-button (click)="bntNuevo()" color="secondary">
+      <ion-button  color="secondary">
         <ion-label>Nuevo</ion-label>
         <ion-icon name="add"></ion-icon>
       </ion-button>
