--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -36,7 +36,7 @@
         <ion-item>
           <ion-col size="auto"><ion-label>Id Propiedad</ion-label></ion-col>
           <ion-col>
-            <ion-input [(ngModel)]="newPropiedad.id_propiedad" placeholder="PROD0001" name="ID" type="text"
+            <ion-input [(ngModel)]="newPropiedad.id_propiedad" placeholder="PROP0001" name="ID" type="text"
               inputmode="text"></ion-input>
           </ion-col>
         </ion-item>
