--- a/src/app/backend/add-gastos/add-gastos.component.html
+++ b/src/app/backend/add-gastos/add-gastos.component.html
@@ -1,3 +1,101 @@
-<p>
-  add-gastos works!
-</p>
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>Gastos</ion-title>
+  </ion-toolbar>
+</ion-header>
+<ion-content>
+  <div class="main_content_div">
+    <ion-card style="--background:  #808081; max-width: 800px; margin: auto;">
+      <ion-card-content style="   max-width: 650px; margin: auto;">
+        <ion-label class="bold_lbl">Agregar nuevo Contacto</ion-label>
+        <ion-item>
+          <ion-col size="auto"><ion-label></ion-label></ion-col>
+        </ion-item>
+        <ion-item slot="header">
+          <ion-grid [fixed]="true">
+            <ion-row>
+              <ion-col size="auto"><ion-icon name="home"></ion-icon></ion-col>
+              <ion-col size="auto"><ion-label></ion-label></ion-col>
+              <ion-col size="auto"><ion-label></ion-label></ion-col>
+              <ion-col size="auto"><ion-label></ion-label></ion-col>
+              <ion-col size="auto"><ion-label></ion-label></ion-col>
+            </ion-row>
+          </ion-grid>
+        </ion-item>
+        <ion-item>
+          <ion-col size="auto"><ion-label>Nombre</ion-label></ion-col>
+          <ion-col>
+            <ion-input placeholder="Nombre" name="name" type="text" inputmode="text"></ion-input>
+          </ion-col>
+        </ion-item>
+        <ion-item>
+          <ion-col size="auto"><ion-label>Apellido Paterno</ion-label></ion-col>
+          <ion-col>
+            <ion-input placeholder="Apellido paterno" name="apellido paterno" type="text" inputmode="text"></ion-input>
+          </ion-col>
+        </ion-item>
+        <ion-item>
+          <ion-col size="auto"><ion-label>Apellido Materno</ion-label></ion-col>
+          <ion-col>
+            <ion-input placeholder="Apellido materno" name="apelllido materno" type="text" inputmode="text"></ion-input>
+          </ion-col>
+        </ion-item>
+        <ion-item>
+          <ion-col size="auto"><ion-label>Telefono +56</ion-label></ion-col>
+          <ion-col>
+            <ion-input placeholder="000000000" type="phone" inputmode="phone"></ion-input>
+          </ion-col>
+        </ion-item>
+        <ion-item>
+          <ion-col size="auto"><ion-label>Rut</ion-label></ion-col>
+          <ion-col>
+            <ion-input placeholder="Rut" name="rut" type="text" inputmode="text"></ion-input>
+          </ion-col>
+        </ion-item>
+        <ion-item>
+          <ion-label>Tipo Contato</ion-label>
+          <ion-select interface="popover" placeholder="Arrendatario/Propietario">
+            <ion-select-option value="Arrendatario">Arrendatario</ion-select-option>
+            <ion-select-option value="Propietario">Propietario</ion-select-option>
+            <ion-select-option value="Otro Contacto">Otro</ion-select-option>
+          </ion-select>
+        </ion-item>
+        <ion-item>
+          <ion-label>Tipo razon</ion-label>
+          <ion-select interface="popover" placeholder="Persona Natural/Empresa" #c (ionChange)="handleChange(c.value)">
+            <ion-select-option value="persona">Persona Natural</ion-select-option>
+            <ion-select-option value="empresa">Empresa</ion-select-option>
+          </ion-select>
+        </ion-item>
+
+
+        <p *ngIf="tiporazon == 'empresa'">
+          <ion-item>
+            <ion-col size="auto"><ion-label>Giro</ion-label></ion-col>
+            <ion-col>
+              <ion-input placeholder="Giro empresa" name="giro" type="text" inputmode="text"></ion-input>
+            </ion-col>
+          </ion-item>
+          <ion-item>
+            <ion-col size="auto"><ion-label>Correo</ion-label></ion-col>
+            <ion-col>
+              <ion-input placeholder="email" name="mail" type="email" inputmode="text"></ion-input>
+            </ion-col>
+          </ion-item>
+          <ion-item>
+            <ion-col size="auto"><ion-label>Direccion</ion-label></ion-col>
+            <ion-col>
+              <ion-input placeholder="av. ejemplo" type="text" inputmode="text"></ion-input>
+            </ion-col>
+          </ion-item>
+        </p>
+        <ion-col>
+          <ion-button expand="block">Guardar</ion-button>
+        </ion-col>
+      </ion-card-content>
+    </ion-card>
+  </div>
+</ion-content>
