--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -139,7 +139,7 @@
                       <ion-col size="auto"><ion-label>Nmuero Ciente:</ion-label></ion-col>
                       <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
                       <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>{{G.Total}}</ion-label></ion-col>
+                        *ngFor="let G of filtroGasto(c.numCliente) "><ion-label>${{G.Total }}</ion-label></ion-col>
                       <ion-col size="auto"
                         *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>{{G.Estado}}</ion-label></ion-col>
                     </ion-row>
@@ -149,7 +149,7 @@
                       <ion-col size="auto"><ion-label>Nmuero Ciente:</ion-label></ion-col>
                       <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
                       <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>{{G.Total}}</ion-label></ion-col>
+                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>${{G.Total}}</ion-label></ion-col>
                       <ion-col size="auto"
                         *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>{{G.Estado}}</ion-label></ion-col>
                     </ion-row>
@@ -159,7 +159,7 @@
                       <ion-col size="auto"><ion-label>Nmuero Ciente:</ion-label></ion-col>
                       <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
                       <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>{{G.Total}}</ion-label></ion-col>
+                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>${{G.Total}}</ion-label></ion-col>
                       <ion-col size="auto"
                         *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>{{G.Estado}}</ion-label></ion-col>
                     </ion-row>
@@ -169,7 +169,7 @@
                       <ion-col size="auto"><ion-label>Nmuero Ciente:</ion-label></ion-col>
                       <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
                       <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>{{G.Total}}</ion-label></ion-col>
+                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>${{G.Total}}</ion-label></ion-col>
                       <ion-col size="auto"
                         *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>{{G.Estado}}</ion-label></ion-col>
                     </ion-row>
@@ -179,7 +179,7 @@
                       <ion-col size="auto"><ion-label>Nmuero Ciente:</ion-label></ion-col>
                       <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
                       <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>{{G.Total}}</ion-label></ion-col>
+                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>${{G.Total}}</ion-label></ion-col>
                       <ion-col size="auto"
                         *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>{{G.Estado}}</ion-label></ion-col>
                     </ion-row>
@@ -189,7 +189,7 @@
                       <ion-col size="auto"><ion-label>Nmuero Ciente:</ion-label></ion-col>
                       <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
                       <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>{{G.Total}}</ion-label></ion-col>
+                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>${{G.Total}}</ion-label></ion-col>
                       <ion-col size="auto"
                         *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>{{G.Estado}}</ion-label></ion-col>
                     </ion-row>
