--- a/src/app/componentes/propiedad/propiedad.component.html
+++ b/src/app/componentes/propiedad/propiedad.component.html
@@ -1,6 +1,7 @@
 <ion-card><ion-item>
   <ion-grid [fixed]="true">
     <ion-row>
+      <ion-col size="auto"><ion-label>{{propiedad.id_propiedad}}</ion-label></ion-col>
       <ion-col size="auto"><ion-icon name="home"></ion-icon></ion-col>
       <ion-col size="auto"><ion-label>{{propiedad.tipo}}</ion-label></ion-col>
       <ion-col size="auto"><ion-label>{{propiedad.numero}},</ion-label></ion-col>
