--- a/src/app/backend/cuentas/cuentas.component.html
+++ b/src/app/backend/cuentas/cuentas.component.html
@@ -9,16 +9,16 @@
 
 <ion-content>
   <div class="main_content_div">
-    <ion-card *ngIf="P" style="--background:  #808081; max-width: 800px; margin: auto;" > 
-    <ion-card-content style="   max-width: 650px; margin: auto;" >
-    
-  
-      <ion-label class="bold_lbl">Agregar nueva Cuenta</ion-label>
-     
-      <ion-item >
-        <ion-col size="auto"><ion-label>{{P.id_propiedad}}</ion-label></ion-col>
-         </ion-item>
-         <ion-item slot="header" >      
+    <ion-card *ngIf="P" style="--background:  #808081; max-width: 800px; margin: auto;">
+      <ion-card-content style="   max-width: 650px; margin: auto;">
+
+
+        <ion-label class="bold_lbl">Agregar nueva Cuenta</ion-label>
+
+        <ion-item>
+          <ion-col size="auto"><ion-label>{{P.id_propiedad}}</ion-label></ion-col>
+        </ion-item>
+        <ion-item slot="header">
           <ion-grid [fixed]="true">
             <ion-row>
               <ion-col size="auto"><ion-icon name="home"></ion-icon></ion-col>
@@ -27,42 +27,43 @@
               <ion-col size="auto"><ion-label>{{P.direccion}},</ion-label></ion-col>
               <ion-col size="auto"><ion-label>{{P.comuna}}</ion-label></ion-col>
             </ion-row>
-           
+
           </ion-grid>
-          </ion-item>
-          <ion-item>  
-            <ion-label >Tipo Cuenta </ion-label>
-            <ion-select  [(ngModel)]="newCuentas.tipoCuenta" interface="popover">
-              <ion-select-option  value="Agua">Agua</ion-select-option>
-              <ion-select-option  value="Luz">Luz</ion-select-option>
-              <ion-select-option  value="Gas">Gas</ion-select-option>
-              <ion-select-option  value="Internet/Cable">Internet/cable</ion-select-option>
-              <ion-select-option  value="Arriendo">Arriendo</ion-select-option>
-            </ion-select>
-         </ion-item><ion-item>  
-          <ion-label >Empresa </ion-label>
-          <ion-select [(ngModel)]="newCuentas.empresa" interface="popover">
-            <ion-select-option  value="Lipigas">Lipigas</ion-select-option>
-            <ion-select-option  value="Gasco">Gasco</ion-select-option>
-            <ion-select-option  value="Aguas Andinas">Aguas Andinas</ion-select-option>
-            <ion-select-option  value="VTR">VTR</ion-select-option>
-            <ion-select-option  value="Movistar">Movistar</ion-select-option>
-            <ion-select-option  value="Enel">Enel</ion-select-option>
-            <ion-select-option  value="Arriendo">Abastible</ion-select-option>
-            <ion-select-option  value="Otro">Otro</ion-select-option>
+        </ion-item>
+        <ion-item>
+          <ion-label>Tipo Cuenta </ion-label>
+          <ion-select [(ngModel)]="newCuentas.tipoCuenta" interface="popover">
+            <ion-select-option value="Agua">Agua</ion-select-option>
+            <ion-select-option value="Luz">Luz</ion-select-option>
+            <ion-select-option value="Gas">Gas</ion-select-option>
+            <ion-select-option value="Internet/Cable">Internet/cable</ion-select-option>
+            <ion-select-option value="Arriendo">Arriendo</ion-select-option>
           </ion-select>
-       </ion-item>
-        
-           <ion-item>
-            <ion-col size="auto"><ion-label  >Numero de Cliente</ion-label></ion-col>
-             <ion-col>
-                <ion-input   [(ngModel)]="newCuentas.numCliente" placeholder="N° cliente" name="numero de cliente" type="text" inputmode="text"></ion-input>
-             </ion-col> 
-             </ion-item>
-      <ion-col>
-      <ion-button (click)="guardarCuentas()" expand="block" >Guardar</ion-button>
-    </ion-col>  
-  </ion-card-content>
-  </ion-card>
+        </ion-item>
+        <ion-item>
+          <ion-label>Empresa</ion-label>
+          <ion-select [(ngModel)]="newCuentas.empresa" interface="popover">
+            <ion-select-option value="Lipigas">Lipigas</ion-select-option>
+            <ion-select-option value="Gasco">Gasco</ion-select-option>
+            <ion-select-option value="Aguas Andinas">Aguas Andinas</ion-select-option>
+            <ion-select-option value="VTR">VTR</ion-select-option>
+            <ion-select-option value="Movistar">Movistar</ion-select-option>
+            <ion-select-option value="Enel">Enel</ion-select-option>
+            <ion-select-option value="Arriendo">Abastible</ion-select-option>
+            <ion-select-option value="Otro">Otro</ion-select-option>
+          </ion-select>
+        </ion-item>
+        <ion-item>
+          <ion-col size="auto"><ion-label>Numero de Cliente</ion-label></ion-col>
+          <ion-col>
+            <ion-input [(ngModel)]="newCuentas.numCliente" placeholder="N° cliente" name="numero de cliente" type="text"
+              inputmode="text"></ion-input>
+          </ion-col>
+        </ion-item>
+        <ion-col>
+          <ion-button (click)="guardarCuentas()" expand="block">Guardar</ion-button>
+        </ion-col>
+      </ion-card-content>
+    </ion-card>
   </div>
 </ion-content>
