--- a/src/app/backend/soporte/soporte.component.html
+++ b/src/app/backend/soporte/soporte.component.html
@@ -1,26 +1,35 @@
 <ion-header>
-  <ion-toolbar color="secondary">
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
+  <ion-toolbar>
     <ion-title>Soporte</ion-title>
   </ion-toolbar>
-
 </ion-header>
 
 <ion-content>
-
-  <ion-card>
-
+  <ion-card class="soporte-card">
     <ion-card-header>
-
-      <ion-button  color="secondary">
-        <ion-label>Nuevo</ion-label>
-        <ion-icon name="add"></ion-icon>
-      </ion-button>
-
+      <ion-card-title>Solicitud de ayuda</ion-card-title>
     </ion-card-header>
-
+    <ion-card-content>
+      <ion-list>
+        <ion-item>
+          <ion-label position="stacked">Nombre</ion-label>
+          <ion-input type="text" [(ngModel)]="nombre"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label position="stacked">Correo electrónico</ion-label>
+          <ion-input type="email" [(ngModel)]="correo"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label position="stacked">Descripción de la ayuda solicitada</ion-label>
+          <ion-textarea [(ngModel)]="descripcion"></ion-textarea>
+        </ion-item>
+      </ion-list>
+      <div class="button-container">
+        <ion-button expand="full" (click)="enviarSolicitud()" [disabled]="!nombre || !correo || !descripcion">
+          <span *ngIf="!enviandoSolicitud">Enviar solicitud</span>
+          <ion-spinner *ngIf="enviandoSolicitud"></ion-spinner>
+        </ion-button>
+      </div>
+    </ion-card-content>
   </ion-card>
-
 </ion-content>
