--- a/src/app/backend/add-gastos/add-gastos.component.html
+++ b/src/app/backend/add-gastos/add-gastos.component.html
@@ -30,6 +30,12 @@
       <!--agregar gasto-->
       <ion-card-content style="   max-width: 650px; margin: auto;">
         <ion-label class="bold_lbl">Agregar Gastos</ion-label>
+        <ion-item>
+          <ion-label>Empresa</ion-label>
+          <ion-select  interface="popover">
+            <ion-select-option *ngFor="let Empresa of filtroEmpresa()" [value]="Empresa.nombre">{{Empresa.nombre}}</ion-select-option>
+          </ion-select>
+        </ion-item>
         <ion-item><ion-col size="auto"><ion-label>Rut Emisor:</ion-label></ion-col>
           <ion-col>
             <ion-input type="number" inputmode="number"></ion-input>
