--- a/src/app/backend/cuentas/cuentas.component.html
+++ b/src/app/backend/cuentas/cuentas.component.html
@@ -32,11 +32,12 @@
         </ion-item>
         <ion-item>
           <ion-label>Tipo Cuenta </ion-label>
-          <ion-select [(ngModel)]="newCuentas.tipoCuenta" interface="popover">
+          <ion-select [(ngModel)]="newCuentas.tipoCuenta" interface="popover" #c
+          (ionChange)="handleChange(c.value)">
             <ion-select-option value="Agua">Agua</ion-select-option>
             <ion-select-option value="Luz">Luz</ion-select-option>
             <ion-select-option value="Gas">Gas</ion-select-option>
-            <ion-select-option value="Internet/Cable">Internet/cable</ion-select-option>
+            <ion-select-option value="Internet-cable">Internet-cable</ion-select-option>
             <ion-select-option value="Arriendo">Arriendo</ion-select-option>
             <ion-select-option value="Gastos Comunes">Gastos Comunes</ion-select-option>
           </ion-select>
@@ -44,7 +45,7 @@
         <ion-item>
           <ion-label>Empresa</ion-label>
           <ion-select [(ngModel)]="newCuentas.empresa" interface="popover">
-            <ion-select-option *ngFor="let Empresa of filtroEmpresa()" [value]="Empresa.nombre">{{Empresa.nombre}}</ion-select-option>
+            <ion-select-option *ngFor="let Empresa of filtroEmpresatipo()" [value]="Empresa.nombre">{{Empresa.nombre}}</ion-select-option>
           </ion-select>
         </ion-item>
         <ion-item>
