--- a/src/app/backend/contacto/contacto.component.html
+++ b/src/app/backend/contacto/contacto.component.html
@@ -102,6 +102,17 @@
                 inputmode="text"></ion-input>
             </ion-col>
           </ion-item>
+          <ion-item>
+            <ion-label>Tipo Cuenta </ion-label>
+            <ion-select [(ngModel)]="newContacto.tipoServicio" interface="popover">
+              <ion-select-option value="Agua">Agua</ion-select-option>
+              <ion-select-option value="Luz">Luz</ion-select-option>
+              <ion-select-option value="Gas">Gas</ion-select-option>
+              <ion-select-option value="Internet/Cable">Internet/cable</ion-select-option>
+              <ion-select-option value="Arriendo">Arriendo</ion-select-option>
+              <ion-select-option value="Gastos Comunes">Gastos Comunes</ion-select-option>
+            </ion-select>
+          </ion-item>
         </p>
         <ion-col>
           <ion-button (click)="guardarContacto()" expand="block">Guardar</ion-button>
